Fixed alignment and scroll bugs

--- a/css/front.css
+++ b/css/front.css
@@ -25,8 +25,8 @@ div#gap{
 
 .carousel-inner .item > *{
     
-    /* height: 100vh;
-    width: 100vw; */
+    height: 100vh;
+    width: 100vw;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
